<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Product">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_shoes"
    android:textSize="40sp"
    android:gravity="center"
    android:textStyle="bold"
    android:textColor="@color/MyFavouriteColor"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:id="@+id/image_shoes_Added"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_shoes_image"
                android:textSize="25sp"
                android:id="@+id/Add_image_shoes"
                android:textColor="@android:color/holo_orange_light"
                android:drawableBottom="@drawable/ic_baseline_image_24"/>
        </FrameLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textSize="25sp"
            android:id="@+id/add_price"
            android:inputType="number"
            android:layout_marginTop="50sp"
            android:drawableEnd="@drawable/ic_baseline_attach_money_24"
            android:background="@drawable/shape"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:textSize="25sp"
            android:id="@+id/add_type"
            />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:id="@+id/recycler_Type"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/made"
            android:textSize="25sp"
            android:inputType="text"
            android:id="@+id/add_made"
            android:layout_marginTop="50sp"
            android:background="@drawable/shape"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sizes"
                android:textSize="25sp"
                android:id="@+id/add_Size"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:id="@+id/recycler_AddSize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/colors"
            android:textSize="25sp"
            android:paddingEnd="60sp"
            tools:ignore="RtlSymmetry"
            android:id="@+id/add_color"
            android:layout_marginTop="50sp"
            android:background="@drawable/shape"/>
            <ImageButton
                android:layout_width="35sp"
                android:id="@+id/click_button"
                android:layout_height="35sp"
                android:layout_marginTop="50dp"
                android:background="@drawable/ic_baseline_add_24"
                android:layout_marginStart="-60dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip_group"
            app:chipSpacingHorizontal="15dp"
            app:singleLine="true">
        </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="25sp"
            android:id="@+id/add_Description"
            android:inputType="text"
            android:layout_marginTop="50sp"
            android:background="@drawable/shape"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:gravity="center"
            android:id="@+id/Addproduct"
            android:textColor="@color/MyFavouriteColor"/>

    </LinearLayout>
</ScrollView>