<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_shoes">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:id="@+id/DataImage" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35sp"
                android:text="@string/category"
                android:textColor="@color/MyFavouriteColor"
                android:id="@+id/DataCategory"
                android:textSize="20sp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/MyFavouriteColor"
                    android:id="@+id/DataPrice"
                    android:layout_marginStart="20sp"
                    android:textSize="20sp"/>
                <Button
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:id="@+id/edit_prc"
                    android:background="@drawable/ic_baseline_edit_24"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made"
            android:textColor="@color/MyFavouriteColor"
            android:layout_marginTop="50sp"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:id="@+id/DataMade"
            />
            <Button
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginTop="50sp"
                android:id="@+id/edit_Made"
                android:background="@drawable/ic_baseline_edit_24"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizes"
                android:id="@+id/size"
                android:textColor="@color/MyFavouriteColor"
                android:textSize="25sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:id="@+id/recyclersize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:id="@+id/DataColors"
                android:textColor="@color/MyFavouriteColor"
                android:textSize="25sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:id="@+id/recyclercolor"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/description"
            android:id="@+id/desc"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_blue_dark"
            />
            <Button
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:id="@+id/edit_description"
                android:layout_toStartOf="@+id/desc"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_baseline_edit_24"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/DataDescription"
            />
    </LinearLayout>
</ScrollView>